# portfolio-chat

./: .env.example  .gitignore  README.md  STEPS.md  app.py  pyproject.toml  requirements.txt
me/: README.md  summary.txt
