[project]
name = "portfolio-chat"
version = "0.1.0"
description = "Personal chat bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.22.0",
    "openai>=1.68.2",
    "pypdf>=5.4.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
